ワークスペースに参加する機能追加

--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,3 +1,4 @@
 <p><%= link_to "ワークスペースを作成する", new_workspace_path %></p>
+<p><%= link_to "ワークスペースを検索する", workspace_search_path %></p>
 <h3>ワークスペースを選択してください</h3>
 <ul><%= render @workspaces %></ul>
