チャンネルに参加する機能追加

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to room.name, workspace_rooms_path(room) %></li>
+<li><%= link_to room.name, workspace_room_path(@workspace,room) %></li>
