--- a/app/views/room_users/new.html.erb
+++ b/app/views/room_users/new.html.erb
@@ -3,11 +3,11 @@
 
 <%= form_with(model: @room_user, local: true) do |form| %>
   <div class="field">
-    <%= form.text_field :user_id, value: current_user.id %>
+    <%= form.hidden_field :user_id, value: current_user.id %>
   </div>
 
   <div class="field">
-    <%= form.text_field :room_id, value: @room.id %>
+    <%= form.hidden_field :room_id, value: @room.id %>
   </div>
 
   <div class="field">
