--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -1,13 +1,2 @@
-<%= form_with(model: @room_user, local: true) do |form| %>
-  <div class="field">
-    <%= form.hidden_field :user_id, value: current_user.id %>
-  </div>
-
-  <div class="field">
-    <%= form.hidden_field :room_id, value: @workspace.id %>
-  </div>
-
-  <div class="field">
-    <%= form.submit "はい" %>
-  </div>
-<% end %>
+<h3>ワークスペースを作成する</h3>
+<%= render 'form', workspace: @workspace %>
