チャット機能追加

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,1 +1,8 @@
-<h3><%= @room.name %></h3>
+
+<h3><%= @room.name %>チャットスペース</h3>
+<div id='messages' data-room_id="<%= @room.id %>">
+  <%= render @messages %>
+</div>
+
+<%= label_tag :content, 'Say something:' %>
+<%= text_field_tag :content, nil, data: { behavior: 'room_speaker' } %>
