フロント修正

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to room.name, workspace_room_path(@workspace,room) %></li>
+<p># <%= link_to room.name, workspace_room_path(@workspace,room), remote: true, style: "color: #dcdcdc;" %></p>
