--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,23 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
     <% flash.each do |key, value| %>
       <% key = 'success' if key == 'notice' %>
       <div class="alert alert-<%= key %>"><%= value %></div>
     <% end %>
     <%= yield %>
   </body>
+
+  <script>
+    $(document).ready(function () {
+      hsize = $(window).height();
+      $("body").css("height", hsize + "px");
+    });
+    $(window).resize(function () {
+      hsize = $(window).height();
+      $("body").css("height", hsize + "px");
+    });
+
+    
+  </script>
 </html>
