--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,3 +1,84 @@
-<p><%= link_to "チャンネルを作成する", new_workspace_room_path(@workspace) %></p>
-<h3>チャンネルを選択してください</h3>
-<ul><%= render @rooms %></ul>
+<div class="navigation">
+  <nav>
+    <div class="row">
+      <div class="workspace-name col-3">
+        <h6><%= @workspace.name %></h6>
+      </div>
+      <div class="channel-name col-9">
+        <h4 id="channel-name"></h4>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<div class="container-flux" style="height: 100%;">
+  <div class="main-contents row"  style="height: 100%;">
+    <div class="col-3 channel-sidebar" style="background-color: #3F0E40; color: rgb(207,195,207); overflow:auto;" >
+      <div class="lists ml-3">
+        <h4>チャンネル</h4>
+        <div class="listitem">  
+          <%= render @rooms %>
+        </div>
+      </div>
+    </div>
+    <div class="col-9 contents" style="height: 100%; overflow: auto;">
+      <div class="messages"></div>
+      <div class="message-input">
+        <div class="form-group ml-3" id="message-form">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  $(document).ready(function () {
+    hsize = $(window).height();
+    $(".channel-sidebar").css("height", hsize + "px");
+  });
+  $(window).resize(function () {
+    hsize = $(window).height();
+    $(".channel-sidebar").css("height", hsize + "px");
+  });
+
+</script>
+
+<style>
+  .navigation {
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    text-align: center;
+  }
+
+  .workspace-name {
+    background-color: #3F0E40;
+    color: rgb(207,195,207);
+    height: 70px;
+    padding-top: 20px;
+  }
+
+  .channel-name {
+    background-color: #ffffff;
+    padding-top: 20px;
+    border-bottom: thin solid #f5f5f5;
+  }
+
+  .main-contents {
+    margin-top: 70px;
+  }
+
+  .messages {
+    padding: 20px 0px 0px 50px;
+    margin-bottom: 900px;
+  }
+  
+  .message-input {
+    position: fixed;
+    top: 600px;
+    width: 60%;
+    height: 100px;
+  }
+</style>
