チャット機能作成

--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -2,3 +2,7 @@
 <p><%= link_to "ワークスペースを検索する", workspace_search_path %></p>
 <h3>ワークスペースを選択してください</h3>
 <ul><%= render @workspaces %></ul>
+
+<% if user_signed_in? %>
+  <a><%= link_to 'Logout', destroy_user_session_path, method: :delete %></a>
+<% end %>
