--- a/app/views/rooms/show.js.erb
+++ b/app/views/rooms/show.js.erb
@@ -1,2 +1,3 @@
-$('.messages').html("<%= j(render partial: 'messages/message', locals: {messages: @messages}) %>");
+$('#messages').html("<%= j(render @messages) %>");
 $('#channel-name').html("<%= @room.name %>");
+$('#messages').attr('data-room_id', '<%= @room.id %>')
