--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<h3>チャンネル一覧</h3>
+
+<p>参加しているルーム</p>
+<% @joined_rooms.each do |room| %>
+  <p># <%= room.name %></p>
+<% end %>
+
+<hr>
+
+<p>参加していないルーム</p>
+<% @not_joined_rooms.each do |room| %>
+  <p># <%= link_to room.name, new_room_user_path(room) %></p>
+<% end %>
