--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -15,14 +15,21 @@
   <div class="main-contents row"  style="height: 100%;">
     <div class="col-3 channel-sidebar" style="background-color: #3F0E40; color: rgb(207,195,207); overflow:auto;" >
       <div class="lists ml-3">
-        <h4>チャンネル</h4>
+        <div class="row">
+          <div class="col-10">
+            <h4><%= link_to "チャンネル", workspace_rooms_path(@workspace) %></h4>
+          </div>
+          <div class="col-2">
+            <%= link_to "+", new_workspace_room_path(@workspace) %>
+          </div>
+        </div>
         <div class="listitem">  
           <%= render @rooms %>
         </div>
       </div>
     </div>
     <div class="col-9 contents" style="height: 100%; overflow: auto;">
-      <div id='messages' data-room_id="1"></div>
+      <div id='messages'></div>
       <div class="message-input">
         <div class="form-group ml-3">
           <%= text_area :content, nil, data: { behavior: 'room_speaker' }, class: "form-control", rows: 5 %>
@@ -32,7 +39,7 @@
   </div>
 </div>
 
-<script>
+<!--<script>
   $(document).ready(function () {
     hsize = $(window).height();
     $(".channel-sidebar").css("height", hsize + "px");
@@ -41,9 +48,17 @@
     hsize = $(window).height();
     $(".channel-sidebar").css("height", hsize + "px");
   });
-</script>
+</script>-->
 
 <style>
+  a {
+    color: #dcdcdc;
+  }
+
+  a:hover {
+    color: #dcdcdc;
+  }
+
   .navigation {
     width: 100%;
     height: 70px;
