--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,9 @@
     <%= yield %>
   </body>
 
-  <script>
-    $(document).ready(function () {
-      hsize = $(window).height();
-      $("body").css("height", hsize + "px");
-    });
-    $(window).resize(function () {
-      hsize = $(window).height();
-      $("body").css("height", hsize + "px");
-    });
-  </script>
+  <style>
+    html, body {
+      height: 100%;
+    }
+  </style>
 </html>
