チャット機能使えるようになった

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [workspace,room], local: true, url: workspace_rooms_path) do |f| %>
+<%= form_with(model: [workspace,room], local: true) do |f| %>
   <div class="field">
     <%= f.label :name, 'チャンネル名：' %>
     <%= f.text_field :name %>
