--- a/app/views/rooms/test.html.erb
+++ b/app/views/rooms/test.html.erb
@@ -13,6 +13,14 @@
   </div>
   <div class="main row">
     <div class="sidevar col-3">
+      <div class="row">
+        <div class="col-10">
+          <h4>チャンネル</h4>
+        </div>
+        <div class="col-2">
+          <h4>+</h4>
+        </div>
+      </div>
       <div class="channel-names">
         <% 30.times do |i| %>
           <p class="channel">
@@ -83,6 +91,7 @@
     height: 100%;
     overflow: auto;
     padding-bottom: 10%;
+
   }
 
   .mainvar {
