--- a/app/views/workspaces/_workspace.html.erb
+++ b/app/views/workspaces/_workspace.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to workspace.name, workspace_path(workspace) %></li>
+<li><%= link_to workspace.name, "/workspaces/#{workspace.id}/rooms/1" %></li>
