--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,129 +1,110 @@
-<div class="navigation">
-  <nav>
-    <div class="row">
-      <div class="workspace-name col-3">
-        <h6><%= @workspace.name %></h6>
-      </div>
-      <div class="channel-name col-9">
-        <h4 id="channel-name"></h4>
+<div class="contents">
+  <div class="navigation row">
+    <div class="workspace-name col-3">
+      <div class="name">
+        <%= @workspace.name %>
       </div>
     </div>
-  </nav>
-</div>
-
-<div class="container-flux" style="height: 100%;">
-  <div class="main-contents row"  style="height: 100%;">
-    <div class="col-3 channel-sidebar" style="background-color: #3F0E40; color: rgb(207,195,207); overflow:auto;" >
-      <div class="lists ml-3">
-        <div class="row">
-          <div class="col-10">
-            <h4><%= link_to "チャンネル", workspace_rooms_path(@workspace) %></h4>
-          </div>
-          <div class="col-2">
-            <%= link_to "+", new_workspace_room_path(@workspace) %>
-          </div>
-        </div>
-        <div class="listitem">  
-          <%= render @rooms %>
-        </div>
+    <div class="channel-name col-9">
+      <div class="name">
+        # <%= @room.name %>
       </div>
     </div>
-    <div class="col-9 contents" style="height: 100%; overflow: auto;">
-      <div id='messages'></div>
-      <div class="message-input">
-        <div class="form-group ml-3">
-          <%= text_area :content, nil, data: { behavior: 'room_speaker' }, class: "form-control", rows: 5 %>
+  </div>
+  <div class="main row">
+    <div class="sidevar col-3">
+      <div class="row">
+        <div class="col-10">
+          <h4><%= link_to "チャンネル", workspace_rooms_path %></h4>
+        </div>
+        <div class="col-2">
+          <h4><%= link_to "+", new_workspace_room_path(@workspace) %></h4>
+        </div>
+      </div>
+      <div class="channels-name">
+        <%= render @rooms %>
+      </div>
+    </div>
+    <div class="mainvar col-9">
+      <div class="messages" data-room_id="<%= @room.id %>">
+        <%= render @messages %>
+        <div class="message-input">
+          <div class="input form-group">
+            <%= text_area :content, nil, data: { behavior: 'room_speaker' }, class: "form-control", style: "width: 100%", rows: 5 %>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
 </div>
 
-<!--<script>
-  $(document).ready(function () {
-    hsize = $(window).height();
-    $(".channel-sidebar").css("height", hsize + "px");
-  });
-  $(window).resize(function () {
-    hsize = $(window).height();
-    $(".channel-sidebar").css("height", hsize + "px");
-  });
-</script>-->
 
 <style>
-  a {
-    color: #dcdcdc;
-  }
-
-  a:hover {
-    color: #dcdcdc;
+  .contents {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   .navigation {
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    text-align: center;
+    height: 8%;
   }
 
   .workspace-name {
     background-color: #3F0E40;
-    color: rgb(207,195,207);
-    height: 70px;
-    padding-top: 20px;
+    text-align: center;
+    display: table;
+    height: 100%;
+    width: 100%;
+    color: rgb(207, 195, 207);
   }
 
   .channel-name {
-    background-color: #ffffff;
-    padding-top: 20px;
+    text-align: center;
+    display: table;
+    height: 100%;
+    width: 100%;
     border-bottom: thin solid #f5f5f5;
   }
 
-  .main-contents {
-    margin-top: 70px;
+  .name {
+    display: table-cell;
+    vertical-align: middle;
   }
 
-  #messages {
-    padding: 20px 0px 0px 50px;
-    margin-bottom: 900px;
+  .main {
+    height: 100%;
   }
-  
+
+  .sidevar {
+    color: rgb(207, 195, 207);
+    background-color: #3F0E40;
+    height: 100%;
+    overflow: auto;
+    padding-bottom: 10%;
+
+  }
+
+  .sidebar,a {
+    color: rgb(207, 195, 207);
+  }
+
+  .sidebar,a:hover {
+    color: white;
+    text-decoration: none;
+  }
+
+  .mainvar {
+    height: 100%;
+    overflow: auto;
+    padding-bottom: 30%;
+  }
+
   .message-input {
     position: fixed;
-    top: 600px;
+    padding: 5px;
     width: 60%;
-    height: 100px;
+    top: 75%;
   }
 </style>
-
-<!--<div class="container-flux">
-  <div class="row">
-    <div class="col-3 menus" style="background-color: #800080; color: #dcdcdc;">
-      <%= render @rooms %>
-    </div>
-    <div class="col-9 contents" id="room_id_<%= @room.id %>">
-      <h3><%= @room.name %>チャットスペース</h3>
-      <div id='messages' data-room_id="<%= @room.id %>">
-        <%= render @messages %>
-      </div>
-
-      <%= label_tag :content, 'Say something:' %>
-      <%= text_field_tag :content, nil, data: { behavior: 'room_speaker' } %>
-    </div>
-  </div>
-</div>
-
-<script>
-  $(document).ready(function () {
-    hsize = $(window).height();
-    $(".menus").css("height", hsize + "px");
-    $(".contents").css("height", hsize + "px");
-  });
-  $(window).resize(function () {
-    hsize = $(window).height();
-    $(".menus").css("height", hsize + "px");
-    $(".contents").css("height", hsize + "px");
-  });
-</script>-->
