ワークスペースを作成するとデフォルトでルームに#generalチャンネルが作成される

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -23,6 +23,7 @@
       </div>
       <div class="channels-name">
         <%= render @rooms %>
+        <p><%= link_to "ワークスペースを変更する", workspaces_path %></p>
       </div>
     </div>
     <div class="mainvar col-9">
