ワークスペースを検索して参加すると自動で#generalに参加する

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -24,6 +24,9 @@
       <div class="channels-name">
         <%= render @rooms %>
         <p><%= link_to "ワークスペースを変更する", workspaces_path %></p>
+        <% if user_signed_in? %>
+          <a><%= link_to 'Logout', destroy_user_session_path, method: :delete %></a>
+        <% end %>
       </div>
     </div>
     <div class="mainvar col-9">
