workspaceのネームをクリック後適切な場所にリンク

--- a/app/views/workspaces/_workspace.html.erb
+++ b/app/views/workspaces/_workspace.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to workspace.name, "/workspaces/#{workspace.id}/rooms/1" %></li>
+<li><%= link_to workspace.name, "/workspaces/#{workspace.id}/rooms/#{workspace.rooms.find_by(name: "general").id}" %></li>
