--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -15,7 +15,7 @@
     <div class="sidevar col-3">
       <div class="row">
         <div class="col-10">
-          <h4><%= link_to "チャンネル", workspace_rooms_path %></h4>
+          <p><%= link_to "チャンネル", workspace_rooms_path %></p>
         </div>
         <div class="col-2">
           <h4><%= link_to "+", new_workspace_room_path(@workspace) %></h4>
@@ -75,6 +75,7 @@
   .name {
     display: table-cell;
     vertical-align: middle;
+    font-size: 12px;
   }
 
   .main {
@@ -87,7 +88,7 @@
     height: 100%;
     overflow: auto;
     padding-bottom: 10%;
-
+    white-space: nowrap;
   }
 
   .sidebar,a {
